# hw-backend-14

./: db.sqlite3  manage.py  pyproject.toml
HWfourteen/: asgi.py  settings.py  urls.py  wsgi.py
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_comment.py  0003_comment_author_news_author.py  0004_alter_comment_options_alter_news_options.py
news/templates/: base.html
news/templates/news/: add_news.html  edit_news.html  news_detail.html  news_list.html
news/templates/registration/: login.html  sign_up.html
